--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
     maven { url 'https://jitpack.io' }
+    maven { url 'http://clojars.org/repo'}
 }
 
 dependencies {
@@ -24,5 +25,5 @@ dependencies {
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     compile group: 'org.apache.commons', name: 'commons-compress', version: '1.13'
     compile group: 'org.tukaani', name: 'xz', version: '1.6'
-
+//    compile "org.jbsdiff:jbsdiff:1.0-SNAPSHOT"
 }
