--- a/build.gradle
+++ b/build.gradle
@@ -12,18 +12,18 @@ repositories {
 }
 
 dependencies {
-    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.16'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.8.1'
-    compile group: 'com.github.jgrapht.jgrapht', name: 'jgrapht-core', version: 'ba745d130dd9934ac9e0265bf2e594dc96ad0739' // 1.0.1 does not properly support .gml imports
-    compile group: 'com.github.jgrapht.jgrapht', name: 'jgrapht-ext', version: 'ba745d130dd9934ac9e0265bf2e594dc96ad0739' // 1.0.1 does not properly support .gml imports
-//    compile group: 'org.jgrapht', name: 'jgrapht-core', version: '1.0.1'
-//    compile group: 'org.jgrapht', name: 'jgrapht-ext', version: '1.0.1'
-    compile group: 'commons-io', name: 'commons-io', version: '2.5'
-    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
-    compile group: 'org.apache.commons', name: 'commons-compress', version: '1.13'
-    compile group: 'org.tukaani', name: 'xz', version: '1.6'
+    compileOnly 'org.projectlombok:lombok:1.16.16'
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-all:1.10.19'
+    compile 'org.slf4j:slf4j-api:1.7.25'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.8.1'
+    compile 'com.github.jgrapht.jgrapht:jgrapht-core:ba745d130dd9934ac9e0265bf2e594dc96ad0739' // 1.0.1 does not properly support .gml imports
+    compile 'com.github.jgrapht.jgrapht:jgrapht-ext:ba745d130dd9934ac9e0265bf2e594dc96ad0739' // 1.0.1 does not properly support .gml imports
+//    compile 'org.jgrapht:jgrapht-core:1.0.1'
+//    compile 'org.jgrapht:jgrapht-ext:1.0.1'
+    compile 'commons-io:commons-io:2.5'
+    compile 'ch.qos.logback:logback-classic:1.2.3'
+    compile 'org.apache.commons:commons-compress:1.13'
+    compile 'org.tukaani:xz:1.6'
 //    compile "org.jbsdiff:jbsdiff:1.0-SNAPSHOT"
 }
