--- a/build.gradle
+++ b/build.gradle
@@ -25,5 +25,5 @@ dependencies {
     compile 'ch.qos.logback:logback-classic:1.2.3'
     compile 'org.apache.commons:commons-compress:1.13'
     compile 'org.tukaani:xz:1.6'
-//    compile "org.jbsdiff:jbsdiff:1.0-SNAPSHOT"
+    compile 'com.github.micheljung:jbsdiff:87695be503'
 }
